<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionScreen">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:padding="10dp"
        android:textSize="16sp"
        android:id="@+id/text1"
        android:fontFamily="sans-serif-black"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/text1"
        android:layout_margin="10dp"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Bookapp"
            android:textAllCaps="false"
            android:onClick="bookAppoint"
            android:id="@+id/btnAppointment"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#4CAF50"
            android:textColor="#fff"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bizadm"
            android:textAllCaps="false"
            android:onClick="spaAdmin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/btnAdmin"
            android:textColor="#000"
            android:background="#FFEB3B"
            />



    </LinearLayout>

</RelativeLayout>