<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:layout_height="match_parent"
    tools:context=".users.BookServices">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageLogo"
            android:src="@drawable/applogo"
            android:layout_gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:hintAnimationEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fullName"
                android:textColor="#000"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:textColor="#000"
                />


        </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickService"
                android:textColor="#fff"
                android:textStyle="bold"
                android:padding="10dp"
                />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#fff"
                />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:focusable="false"
                android:textColor="#000"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visittime"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="10dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:focusable="false"
                android:textColor="#000"
                />


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="Submit Booking"
        android:textAllCaps="false"
        android:id="@+id/submitBookinga"
        android:textStyle="bold"
        />







</LinearLayout>